# strawberry_grasp_isaac

./: .gitignore  README.md  isaac_sim_script_editor_bridge.py  robot.urdf
config/: environment.yaml
config/curobo/: e0509_gripper.yml  e0509_gripper_measured_tcp.yml  e0509_spheres.yml
docs/: DEVELOPMENT_HISTORY_AND_TASKS.md  SIMULATION_INTERFACE_SPEC_20260618.md  TROUBLESHOOTING.md  USER_MANUAL.md  curobo_planner_node.py  robot_control_prompt.md  runtime_jsonl_logger.py  scan_executor_node.py  strawberry_fusion_node.py  user_manual_isaac_bridge.md  전체_파이프라인.md
docs/other/: doosan_real_hardware_bridge.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_sim_scripts/: isaac_sim_script_editor_bridge.py  self_collision_logger_script.py
log/: latest_build
robot/: README.md  robot.usd  robot_recent.usd  strawberry_grasp.json  strawberry_grasp_robot.usd  strawberry_grasp_robot_settings.settings.usd  strawberry_ripe.usd  strawberry_unripe.usd  table.usd
robot/configuration/: calibration_eye_in_hand.npz  robot_physics.usd  robot_robot.usd  robot_sensor.usd  script.py
robot/textures/: studio.hdr
src/dsr_gripper_tcp_interfaces/: CMakeLists.txt  package.xml
src/dsr_gripper_tcp_interfaces/action/: SafeGrasp.action
src/isaac_sim_bridge/: package.xml  setup.cfg  setup.py
src/strawberry_motion/: package.xml  setup.cfg  setup.py
src/strawberry_sim_core/: package.xml  setup.cfg  setup.py  test_bridge_services.py
src/strawberry_sim_core/strawberry_sim_core/: fake_vision_node.py  sim_executor_bridge_node.py
(+16 files in other folders)
